--- a/res/drawable/bg_actionbar.xml
+++ b/res/drawable/bg_actionbar.xml
@@ -8,7 +8,7 @@
           android:top="-5dp">
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
                android:shape="rectangle">
-            <solid android:color="@android:color/transparent"/>
+            <solid android:color="@color/actionbar"/>
             <stroke android:color="@color/bottom_border" android:width="1dp"></stroke>
         </shape>
     </item>
