--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -15,7 +15,7 @@
                 android:layout_marginTop="0dp"
                 android:textAppearance="@android:style/TextAppearance.Large"
                 android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_light"
+                android:textColor="@color/title"
                 />
         <TableLayout
                 android:id="@+id/table"
