--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -1,5 +1,5 @@
 <resources>
     <color name="actionbar">#77669900</color>
-    <color name="bottom_border">@android:color/holo_green_dark</color>
-    <color name="title">@android:color/holo_green_light</color>
+    <color name="bottom_border">#ff669900</color>
+    <color name="title">#ff99cc00</color>
 </resources>
