+ Added basic CPU info.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,6 +27,7 @@
 
             <include layout="@layout/part_system"/>
             <include layout="@layout/part_device"/>
+            <include layout="@layout/part_cpu"/>
             <include layout="@layout/part_display"/>
             <include layout="@layout/part_connectivity"/>
             <include layout="@layout/part_imsi"/>
