--- a/res/layout/part_cpu.xml
+++ b/res/layout/part_cpu.xml
@@ -41,6 +41,26 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/cpu_manufacturer"
+        style="@style/Widget.Label"
+        />
+
+    <TextView
+        android:id="@+id/cpu_manufacturer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown"
+        style="@style/Widget.Value"
+        />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/cores"
         style="@style/Widget.Label"
         />
