--- a/res/drawable/bg_actionbar.xml
+++ b/res/drawable/bg_actionbar.xml
@@ -2,14 +2,17 @@
 
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:bottom="2dp"
-          android:left="-5dp"
-          android:right="-5dp"
-          android:top="-5dp">
-        <shape xmlns:android="http://schemas.android.com/apk/res/android"
-               android:shape="rectangle">
-            <solid android:color="@color/actionbar"/>
-            <stroke android:color="@color/bottom_border" android:width="1dp"></stroke>
-        </shape>
-    </item>
+  <item
+      android:bottom="2dp"
+      android:left="-5dp"
+      android:right="-5dp"
+      android:top="-5dp">
+    <shape xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle">
+      <solid android:color="@color/actionbar" />
+      <stroke
+          android:width="1dp"
+          android:color="@color/bottom_border"></stroke>
+    </shape>
+  </item>
 </layer-list>
