--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
-      >
+      android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_device_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        android:layout_marginTop="@dimen/margin_vertical"
         android:layout_marginLeft="@dimen/margin_horizontal"
-        android:textSize="30sp"
-        android:textStyle="normal"
+        android:layout_marginTop="@dimen/margin_vertical"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/unknown"
         android:textColor="@color/title"
-        android:fontFamily="sans-serif-light" />
+        android:textSize="30sp"
+        android:textStyle="normal" />
 
     <TableLayout
         android:id="@+id/table"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:stretchColumns="1"
+        android:layout_marginBottom="@dimen/margin_vertical"
         android:shrinkColumns="1"
-        android:layout_marginBottom="@dimen/margin_vertical" >
+        android:stretchColumns="1">
 
       <include layout="@layout/part_system" />
 
