--- a/res/layout/part_cpu.xml
+++ b/res/layout/part_cpu.xml
@@ -6,12 +6,11 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/category_cpu"
         android:layout_span="2"
-        style="@style/Widget.Category"
-        />
+        android:text="@string/category_cpu" />
   </TableRow>
 
   <TableRow
@@ -19,19 +18,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_type"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_type" />
 
     <TextView
         android:id="@+id/cpu_type"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -39,19 +36,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_manufacturer"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_manufacturer" />
 
     <TextView
         android:id="@+id/cpu_manufacturer"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -59,19 +54,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_architecture"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_architecture" />
 
     <TextView
         android:id="@+id/cpu_architecture"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -79,19 +72,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_revision"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_revision" />
 
     <TextView
         android:id="@+id/cpu_revision"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -99,19 +90,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cores"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cores" />
 
     <TextView
         android:id="@+id/cpu_cores"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -119,19 +108,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/features"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/features" />
 
     <TextView
         android:id="@+id/cpu_features"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -139,19 +126,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_min_freq"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_min_freq" />
 
     <TextView
         android:id="@+id/cpu_min_freq"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -159,19 +144,17 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_max_freq"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_max_freq" />
 
     <TextView
         android:id="@+id/cpu_max_freq"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 
   <TableRow
@@ -179,18 +162,16 @@
       android:layout_height="wrap_content">
 
     <TextView
+        style="@style/Widget.Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/cpu_cur_freq"
-        style="@style/Widget.Label"
-        />
+        android:text="@string/cpu_cur_freq" />
 
     <TextView
         android:id="@+id/cpu_cur_freq"
+        style="@style/Widget.Value"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/unknown"
-        style="@style/Widget.Value"
-        />
+        android:text="@string/unknown" />
   </TableRow>
 </merge>
