--- a/res/layout/part_display.xml
+++ b/res/layout/part_display.xml
@@ -1,149 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/category_display"
-                android:layout_span="2"
-                android:layout_marginTop="5dp"
-                style="@style/Widget.Category"
-                />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/resolution_px"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_resolution_px"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/resolution_dp"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_resolution_dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/resolution_usable"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_resolution_usable"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/smallest_width"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_min_width"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+    <TextView
+        style="@style/Widget.Category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_span="2"
+        android:text="@string/category_display" />
+  </TableRow>
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/density"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_density"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/dpi"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_dpi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/resolution_px" />
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/size_qualifier"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_size_qualifier"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+    <TextView
+        android:id="@+id/text_resolution_px"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
 
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/orientation"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_orientation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/resolution_dp" />
+
+    <TextView
+        android:id="@+id/text_resolution_dp"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/resolution_usable" />
+
+    <TextView
+        android:id="@+id/text_resolution_usable"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/smallest_width" />
+
+    <TextView
+        android:id="@+id/text_min_width"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/density" />
+
+    <TextView
+        android:id="@+id/text_density"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/dpi" />
+
+    <TextView
+        android:id="@+id/text_dpi"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/size_qualifier" />
+
+    <TextView
+        android:id="@+id/text_size_qualifier"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/orientation" />
+
+    <TextView
+        android:id="@+id/text_orientation"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
 </merge>
