--- a/res/layout/part_imsi.xml
+++ b/res/layout/part_imsi.xml
@@ -1,61 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/category_imsi"
-                android:layout_span="2"
-                style="@style/Widget.Category"
-                />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/imsi"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_imsi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/mcc"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_mcc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
-    <TableRow android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/mnc"
-                style="@style/Widget.Label"
-                />
-        <TextView
-                android:id="@+id/text_mnc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/unknown"
-                style="@style/Widget.Value"
-                />
-    </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_span="2"
+        android:text="@string/category_imsi" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/imsi" />
+
+    <TextView
+        android:id="@+id/text_imsi"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/mcc" />
+
+    <TextView
+        android:id="@+id/text_mcc"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
+
+  <TableRow
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
+
+    <TextView
+        style="@style/Widget.Label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/mnc" />
+
+    <TextView
+        android:id="@+id/text_mnc"
+        style="@style/Widget.Value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/unknown" />
+  </TableRow>
 </merge>
