--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu_save"
-          android:icon="@android:drawable/ic_menu_save"
-          android:title="@string/menu_save"
-          android:showAsAction="ifRoom|withText" />
-    <item android:id="@+id/menu_share"
-          android:icon="@android:drawable/ic_menu_share"
-          android:actionProviderClass="android.widget.ShareActionProvider"
-          android:title="@string/menu_share"
-          android:showAsAction="ifRoom|withText" />
+  <item
+      android:id="@+id/menu_save"
+      android:icon="@android:drawable/ic_menu_save"
+      android:showAsAction="ifRoom|withText"
+      android:title="@string/menu_save" />
+  <item
+      android:id="@+id/menu_share"
+      android:actionProviderClass="android.widget.ShareActionProvider"
+      android:icon="@android:drawable/ic_menu_share"
+      android:showAsAction="ifRoom|withText"
+      android:title="@string/menu_share" />
 
 </menu>
